<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataModeActivity"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp" />

    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item1Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item1"
            android:textAlignment="viewStart"
            android:paddingTop="7.5dp"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item2Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item2"
            android:textAlignment="viewStart"
            android:paddingTop="7.5dp"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item3Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item3"
            android:textAlignment="viewStart"
            android:paddingTop="7.5dp"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item4Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item4"
            android:textAlignment="viewStart"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item5Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item5"
            android:textAlignment="viewStart"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item6"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/item6Text"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/item6"
            android:textAlignment="viewStart"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItem6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemNextPage"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_menu_margin">

        <TextView
            android:id="@+id/itemNextPageText"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/next_page"
            android:textAlignment="viewStart"
            android:paddingTop="7.5dp"
            android:textSize="18dp"
            android:textColor="@color/text"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabItemNextPage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_menu_more" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_fab_plus" />

</FrameLayout>